# github_stats_to_postgres

./: .gitignore  main.py  pyproject.toml
src/: database.ini  functions.py  main.py  postgres_db.py
